<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/app_bg"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/CALCULATE_YOUR"
        android:textColor="@color/dark_txt"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="4dp"
        android:background="@color/dark_txt"
        android:text="@string/AGE"
        android:textColor="@color/light_obj"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/IN_MINUTES"
        android:textColor="@color/dark_txt"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_obj"
        android:textColor="@color/light_obj"
        android:textStyle="bold"
        android:text="@string/SELECT_YOUR_DATE_OF_BIRTH" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_date"
        android:textColor="@color/dark_txt"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SELECTED_DATE"
        android:textColor="@color/dark_txt"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvTotalMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/user_date_in_minutes"
        android:textColor="@color/dark_txt"
        android:textSize="38sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MINUTES"
        android:textColor="@color/dark_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>